[package]
name = "bevy-verlet"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_egui = "0.15"
egui = { version = "0.18", default-features = false}
