[package]
name = "bevy-verlet"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasm-bindgen = { version = "= 0.2.82" } # Not what I thought
bevy = { version = "0.12.0" }
bevy_egui = "0.24"
egui = { version = "0.24", default-features = false}
